fixed z-index overlay

--- a/styles/board/board.css
+++ b/styles/board/board.css
@@ -153,6 +153,7 @@
     background: rgba(0, 0, 0, 0.3);
     width:100%;
     height:100%;
+    z-index: 1000;
 }
 
 .bg-overlay {
